--- a/index.html
+++ b/index.html
@@ -74,6 +74,93 @@
       margin-top: 40px;
       text-shadow: 0 0 8px #000000, 0 0 2px #550000;
     }
+  
+   .icon {
+      background-color: transparent;
+      border: none;
+      padding: 0;
+      margin: 20px;
+      display: inline-block;
+      text-align: center;
+      transition: 0.3s ease;
+    }
+
+    .icon img {
+      width: 160px;
+      height: auto;
+      display: block;
+      margin: 0 auto;
+    }
+
+    .icon div {
+      margin-top: 8px;
+      color: #aa6666;
+      font-weight: bold;
+      text-shadow: 0 0 4px #220000;
+      font-size: 1.1em;
+    }
+
+    body {
+      background-image: url('images/ghosts-bg.png');
+      background-size: cover;
+      background-attachment: fixed;
+    }
+  
+    body {
+      background: #0c0606 !important;
+      background-image: none !important;
+    }
+
+    .taskbar {
+      background: rgba(10, 5, 5, 0.8);
+      border-top: 2px solid #330000;
+      box-shadow: 0 -2px 10px #000000aa;
+    }
+
+    .icon div {
+      font-family: 'UnifrakturCook', cursive;
+      font-size: 1.6em;
+      color: #ddbbbb;
+      text-shadow: 0 0 6px #000;
+    }
+
+    .desktop {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 80px;
+      padding: 120px 40px;
+    }
+
+    .header-title {
+      font-family: 'UnifrakturCook', cursive;
+      font-size: 3em;
+      color: #bb6666;
+      text-align: center;
+      margin-top: 40px;
+      text-shadow: 0 0 8px #000000, 0 0 2px #550000;
+    }
+  
+    body {
+      background-color: #141613 !important;
+    }
+
+    .header-title {
+      font-family: 'UnifrakturCook', cursive;
+      font-size: 3.4em;
+      color: #d6d6d6;
+      text-align: center;
+      margin-top: 40px;
+      text-shadow: 0 0 10px #000000, 0 0 4px #444;
+    }
+
+    .taskbar {
+      background: rgba(20, 20, 20, 0.95);
+      border-top: 2px solid #1f1f1f;
+      box-shadow: 0 -2px 10px #000000;
+      backdrop-filter: blur(2px);
+      padding: 6px 12px;
+    }
   </style>
   <link href="https://fonts.googleapis.com/css2?family=UnifrakturCook:wght@700&amp;display=swap" rel="stylesheet"/>
  </head>
