--- a/index.html
+++ b/index.html
@@ -203,8 +203,10 @@
   <link href="https://fonts.googleapis.com/css2?family=UnifrakturCook:wght@700&amp;display=swap" rel="stylesheet"/>
  </head>
  <body>
-  <div class="header-title">
-   MOTH DEMIENNE
+  <div style="display: flex; justify-content: center;">
+   <div class="header-title">
+    MOTH DEMIENNE
+   </div>
   </div>
   <div class="desktop">
    <div class="icon" onclick="window.location.href='forum.html'">
