--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </title>
   <link href="favicon.ico" rel="icon" type="image/x-icon"/>
   <link href="style.css" rel="stylesheet"/>
-  <link href="https://fonts.cdnfonts.com/css/pixy" rel="stylesheet"/>
+  <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
   <style>
    .icon {
       background-color: transparent;
@@ -52,7 +52,7 @@
     }
 
     .icon div {
-      font-family: 'UnifrakturCook', cursive;
+      font-family: 'Press Start 2P', monospace;
       font-size: 1.6em;
       color: #ddbbbb;
       text-shadow: 0 0 6px #000;
@@ -67,7 +67,7 @@
     }
 
     .header-title {
-      font-family: 'UnifrakturCook', cursive;
+      font-family: 'Press Start 2P', monospace;
       font-size: 3em;
       color: #bb6666;
       text-align: center;
@@ -118,7 +118,7 @@
     }
 
     .icon div {
-      font-family: 'UnifrakturCook', cursive;
+      font-family: 'Press Start 2P', monospace;
       font-size: 1.6em;
       color: #ddbbbb;
       text-shadow: 0 0 6px #000;
@@ -133,7 +133,7 @@
     }
 
     .header-title {
-      font-family: 'UnifrakturCook', cursive;
+      font-family: 'Press Start 2P', monospace;
       font-size: 3em;
       color: #bb6666;
       text-align: center;
@@ -146,7 +146,7 @@
     }
 
     .header-title {
-      font-family: 'UnifrakturCook', cursive;
+      font-family: 'Press Start 2P', monospace;
       font-size: 3.4em;
       color: #d6d6d6;
       text-align: center;
@@ -174,7 +174,7 @@
     }
 
     .header-title {
-      font-family: 'UnifrakturCook', cursive;
+      font-family: 'Press Start 2P', monospace;
       font-size: 3.8em;
       color: #e4e4e4;
       text-align: center;
@@ -200,7 +200,7 @@
       padding: 6px 12px;
     }
   </style>
-  <link href="https://fonts.googleapis.com/css2?family=UnifrakturCook:wght@700&amp;display=swap" rel="stylesheet"/>
+  
  
 
 
