--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     .icon div {
       font-family: 'Press Start 2P', monospace;
       font-size: 1.6em;
-      color: #ddbbbb;
+      color: #dcdcdc;
       text-shadow: 0 0 6px #000;
     }
 
@@ -69,7 +69,7 @@
     .header-title {
       font-family: 'Press Start 2P', monospace;
       font-size: 3em;
-      color: #bb6666;
+      color: #dcdcdc;
       text-align: center;
       margin-top: 40px;
       text-shadow: 0 0 8px #000000, 0 0 2px #550000;
@@ -120,7 +120,7 @@
     .icon div {
       font-family: 'Press Start 2P', monospace;
       font-size: 1.6em;
-      color: #ddbbbb;
+      color: #dcdcdc;
       text-shadow: 0 0 6px #000;
     }
 
@@ -135,7 +135,7 @@
     .header-title {
       font-family: 'Press Start 2P', monospace;
       font-size: 3em;
-      color: #bb6666;
+      color: #dcdcdc;
       text-align: center;
       margin-top: 40px;
       text-shadow: 0 0 8px #000000, 0 0 2px #550000;
@@ -148,7 +148,7 @@
     .header-title {
       font-family: 'Press Start 2P', monospace;
       font-size: 3.4em;
-      color: #d6d6d6;
+      color: #dcdcdc;
       text-align: center;
       margin-top: 40px;
       text-shadow: 0 0 10px #000000, 0 0 4px #444;
@@ -176,7 +176,7 @@
     .header-title {
       font-family: 'Press Start 2P', monospace;
       font-size: 3.8em;
-      color: #e4e4e4;
+      color: #dcdcdc;
       text-align: center;
       margin-top: 40px;
       text-shadow: 0 0 10px #000000, 0 0 4px #aaa;
