--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </title>
   <link href="favicon.ico" rel="icon" type="image/x-icon"/>
   <link href="style.css" rel="stylesheet"/>
-  <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
   <style>
    .icon {
       background-color: transparent;
@@ -52,7 +52,7 @@
     }
 
     .icon div {
-      font-family: 'Press Start 2P', monospace;
+      font-family: 'VT323', monospace;
       font-size: 1.6em;
       color: #dcdcdc;
       text-shadow: 0 0 6px #000;
@@ -67,7 +67,7 @@
     }
 
     .header-title {
-      font-family: 'Press Start 2P', monospace;
+      font-family: 'VT323', monospace;
       font-size: 3em;
       color: #dcdcdc;
       text-align: center;
@@ -118,7 +118,7 @@
     }
 
     .icon div {
-      font-family: 'Press Start 2P', monospace;
+      font-family: 'VT323', monospace;
       font-size: 1.6em;
       color: #dcdcdc;
       text-shadow: 0 0 6px #000;
@@ -133,7 +133,7 @@
     }
 
     .header-title {
-      font-family: 'Press Start 2P', monospace;
+      font-family: 'VT323', monospace;
       font-size: 3em;
       color: #dcdcdc;
       text-align: center;
@@ -146,7 +146,7 @@
     }
 
     .header-title {
-      font-family: 'Press Start 2P', monospace;
+      font-family: 'VT323', monospace;
       font-size: 3.4em;
       color: #dcdcdc;
       text-align: center;
@@ -174,7 +174,7 @@
     }
 
     .header-title {
-      font-family: 'Press Start 2P', monospace;
+      font-family: 'VT323', monospace;
       font-size: 3.8em;
       color: #dcdcdc;
       text-align: center;
