--- a/index.html
+++ b/index.html
@@ -258,7 +258,8 @@
   </div>
   <script src="main.js">
   </script>
-  <script src="forum.js">
+  <script src="forum.js"></script>
+  <script type="module" src="profile.js"></script>
   </script>
  
 
