--- a/index.html
+++ b/index.html
@@ -256,6 +256,9 @@
   </div>
   <div id="window-container">
   </div>
+  <script type="module" src="firebase.js"></script>
+  <script type="module" src="forum.js"></script>
+  <script type="module" src="profile.js"></script>
   <script src="main.js">
   </script>
   <script src="forum.js"></script>
