--- a/index.html
+++ b/index.html
@@ -259,11 +259,7 @@
   <script type="module" src="firebase.js"></script>
   <script type="module" src="forum.js"></script>
   <script type="module" src="profile.js"></script>
-  <script src="main.js">
-  </script>
-  <script src="forum.js"></script>
-  <script type="module" src="profile.js"></script>
-  </script>
+  <script src="main.js"></script>
  
 
 
