--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
   <script type="module" src="firebase.js"></script>
   <script type="module" src="forum.js"></script>
   <script type="module" src="profile.js"></script>
-  <script src="main.js"></script>
+  <script type="module" src="main.js"></script>
  
 
 
