--- a/thread.html
+++ b/thread.html
@@ -22,6 +22,16 @@
   </script>
 </head>
 <body>
+
+  <!-- Меню -->
+  <div class="menu">
+    <a href="forum.html">/b/</a>
+    <a href="news.html">/news/</a>
+    <a href="read.html">/read/</a>
+    <a href="profile.html">/profile/</a>
+  </div>
+
+  <!-- Сам тред -->
   <div class="thread" id="thread1">
     <h2 style="color:#ff0040;">/b/ - Тред</h2>
 
