--- a/forum.html
+++ b/forum.html
@@ -6,7 +6,14 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <h1 style="text-align:center; margin-top:20px; color:#ff0040;">Форум</h1>
+
+  <!-- Меню -->
+  <div class="menu">
+    <a href="forum.html">/b/</a>
+    <a href="news.html">/news/</a>
+    <a href="read.html">/read/</a>
+    <a href="profile.html">/profile/</a>
+  </div>
 
   <!-- Список тредов плитками -->
   <div class="board">
@@ -31,5 +38,6 @@
       <div class="meta">23 поста • 05/08/25</div>
     </a>
   </div>
+
 </body>
 </html>
