--- a/index.html
+++ b/index.html
@@ -1,15 +1,23 @@
 <!DOCTYPE html>
 <html lang="ru">
- <head>
+<head>
   <meta charset="utf-8"/>
-  <title>
-   MOLDEM.EXE
-  </title>
+  <title>MOLDEM.EXE</title>
   <link href="favicon.ico" rel="icon" type="image/x-icon"/>
   <link href="style.css" rel="stylesheet"/>
   <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
   <style>
-   .icon {
+    body {
+      margin: 0;
+      background-color: #000;
+      background-image: 
+        linear-gradient(0deg, rgba(255,0,64,0.08) 1px, transparent 1px),
+        linear-gradient(90deg, rgba(255,0,64,0.08) 1px, transparent 1px);
+      background-size: 40px 40px;
+      color: #dcdcdc;
+      font-family: 'Press Start 2P', monospace;
+    }
+    .icon {
       background-color: transparent;
       border: none;
       padding: 0;
@@ -18,46 +26,18 @@
       text-align: center;
       transition: 0.3s ease;
     }
-
     .icon img {
       width: 160px;
       height: auto;
       display: block;
       margin: 0 auto;
     }
-
     .icon div {
       margin-top: 8px;
-      color: #aa6666;
-      font-weight: bold;
-      text-shadow: 0 0 4px #220000;
-      font-size: 1.1em;
-    }
-
-    body {
-      background-image: url('images/ghosts-bg.png');
-      background-size: cover;
-      background-attachment: fixed;
-    }
-  
-    body {
-      background: #0c0606 !important;
-      background-image: none !important;
-    }
-
-    .taskbar {
-      background: rgba(10, 5, 5, 0.8);
-      border-top: 2px solid #330000;
-      box-shadow: 0 -2px 10px #000000aa;
-    }
-
-    .icon div {
-      font-family: 'Press Start 2P', monospace;
       font-size: 1.6em;
       color: #dcdcdc;
       text-shadow: 0 0 6px #000;
     }
-
     .desktop {
       display: flex;
       flex-wrap: wrap;
@@ -65,116 +45,7 @@
       gap: 80px;
       padding: 120px 40px;
     }
-
     .header-title {
-      font-family: 'Press Start 2P', monospace;
-      font-size: 3em;
-      color: #dcdcdc;
-      text-align: center;
-      margin-top: 40px;
-      text-shadow: 0 0 8px #000000, 0 0 2px #550000;
-    }
-  
-   .icon {
-      background-color: transparent;
-      border: none;
-      padding: 0;
-      margin: 20px;
-      display: inline-block;
-      text-align: center;
-      transition: 0.3s ease;
-    }
-
-    .icon img {
-      width: 160px;
-      height: auto;
-      display: block;
-      margin: 0 auto;
-    }
-
-    .icon div {
-      margin-top: 8px;
-      color: #aa6666;
-      font-weight: bold;
-      text-shadow: 0 0 4px #220000;
-      font-size: 1.1em;
-    }
-
-    body {
-      background-image: url('images/ghosts-bg.png');
-      background-size: cover;
-      background-attachment: fixed;
-    }
-  
-    body {
-      background: #0c0606 !important;
-      background-image: none !important;
-    }
-
-    .taskbar {
-      background: rgba(10, 5, 5, 0.8);
-      border-top: 2px solid #330000;
-      box-shadow: 0 -2px 10px #000000aa;
-    }
-
-    .icon div {
-      font-family: 'Press Start 2P', monospace;
-      font-size: 1.6em;
-      color: #dcdcdc;
-      text-shadow: 0 0 6px #000;
-    }
-
-    .desktop {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      gap: 80px;
-      padding: 120px 40px;
-    }
-
-    .header-title {
-      font-family: 'Press Start 2P', monospace;
-      font-size: 3em;
-      color: #dcdcdc;
-      text-align: center;
-      margin-top: 40px;
-      text-shadow: 0 0 8px #000000, 0 0 2px #550000;
-    }
-  
-    body {
-      background-color: #141613 !important;
-    }
-
-    .header-title {
-      font-family: 'Press Start 2P', monospace;
-      font-size: 3.4em;
-      color: #dcdcdc;
-      text-align: center;
-      margin-top: 40px;
-      text-shadow: 0 0 10px #000000, 0 0 4px #444;
-    }
-
-    .taskbar {
-      background: rgba(20, 20, 20, 0.95);
-      border-top: 2px solid #1f1f1f;
-      box-shadow: 0 -2px 10px #000000;
-      backdrop-filter: blur(2px);
-      padding: 6px 12px;
-    }
-  
-    @keyframes breathing {
-      0%, 100% {
-        opacity: 0.8;
-        text-shadow: 0 0 4px #666;
-      }
-      50% {
-        opacity: 1;
-        text-shadow: 0 0 12px #eee;
-      }
-    }
-
-    .header-title {
-      font-family: 'Press Start 2P', monospace;
       font-size: 3.8em;
       color: #dcdcdc;
       text-align: center;
@@ -187,11 +58,16 @@
       background-color: rgba(10, 10, 10, 0.4);
       box-shadow: 0 0 10px #000;
     }
-
-    body {
-      background-color: #141613 !important;
+    @keyframes breathing {
+      0%, 100% {
+        opacity: 0.8;
+        text-shadow: 0 0 4px #666;
+      }
+      50% {
+        opacity: 1;
+        text-shadow: 0 0 12px #eee;
+      }
     }
-
     .taskbar {
       background: linear-gradient(to top, #1b1e1b, #0f100f);
       border-top: 2px solid #333;
@@ -200,68 +76,44 @@
       padding: 6px 12px;
     }
   </style>
-  
- 
-
-
 </head>
- <body>
+<body>
   <div style="display: flex; justify-content: center;">
-   <div class="header-title">
-    MOTH DEMIENNE
-   </div>
+    <div class="header-title">MOTH DEMIENNE</div>
   </div>
   <div class="desktop">
-   <div class="icon" onclick="window.location.href='forum.html'">
-    <img alt="Forum" src="images/icon_forum.png"/>
-    <div>
-     Forum
+    <div class="icon" onclick="window.location.href='forum.html'">
+      <img src="images/icon_forum.png" alt="Forum"/>
+      <div>Forum</div>
     </div>
-   </div>
-   <div class="icon" onclick="openWindow('news')">
-    <img alt="News" src="images/icon_news.png"/>
-    <div>
-     News
+    <div class="icon" onclick="openWindow('news')">
+      <img src="images/icon_news.png" alt="News"/>
+      <div>News</div>
     </div>
-   </div>
-   <div class="icon" onclick="openWindow('readnews')">
-    <img alt="Read" src="images/icon_readnews.png"/>
-    <div>
-     Read
+    <div class="icon" onclick="openWindow('readnews')">
+      <img src="images/icon_readnews.png" alt="Read"/>
+      <div>Read</div>
     </div>
-   </div>
-   <div class="icon" onclick="openWindow('profile')">
-    <img alt="Profile" src="images/icon_profile.png"/>
-    <div>
-     Profile
+    <div class="icon" onclick="openWindow('profile')">
+      <img src="images/icon_profile.png" alt="Profile"/>
+      <div>Profile</div>
     </div>
-   </div>
   </div>
   <div class="taskbar">
-   <button id="start-btn" onclick="toggleStartMenu()">
-    <img alt="start" src="images/icon_start.png"/>
-   </button>
-   <div class="hidden" id="start-menu">
-    <div onclick="openWindow('accession')">
-     Accession
+    <button id="start-btn" onclick="toggleStartMenu()">
+      <img src="images/icon_start.png" alt="start"/>
+    </button>
+    <div id="start-menu" class="hidden">
+      <div onclick="openWindow('accession')">Accession</div>
+      <div onclick="openWindow('profile')">Profile</div>
+      <div onclick="openWindow('help')">Help</div>
     </div>
-    <div onclick="openWindow('profile')">Profile</div>
-    <div onclick="openWindow('help')">
-     Help
-    </div>
-   </div>
-   <div class="taskbar-time">
-    6:66
-   </div>
+    <div class="taskbar-time">6:66</div>
   </div>
-  <div id="window-container">
-  </div>
+  <div id="window-container"></div>
   <script type="module" src="firebase.js"></script>
   <script type="module" src="forum.js"></script>
   <script type="module" src="profile.js"></script>
   <script type="module" src="main.js"></script>
- 
-
-
 </body>
 </html>
