--- a/profile.html
+++ b/profile.html
@@ -9,7 +9,6 @@
 <body>
   <div id="profile-root"></div>
 
-  <script type="module" src="firebase.js"></script>
-  <script type="module" src="profile.js"></script>
+  <script src="profile.js"></script>
 </body>
 </html>
