--- a/index.html
+++ b/index.html
@@ -46,5 +46,16 @@
   <script type="module" src="forum.js"></script>
   <script type="module" src="profile.js"></script>
   <script type="module" src="main.js"></script>
+
+  <div class="window">
+    <div class="window-header">
+      Окно
+      <div class="close-btn" onclick="this.closest('.window').remove()">×</div>
+    </div>
+    <div class="window-content">
+      Это тестовое содержимое окна. Текст должен быть чёрным.
+    </div>
+  </div>
+
 </body>
 </html>
