--- a/thread.html
+++ b/thread.html
@@ -39,6 +39,7 @@
           <textarea id="reply-input" placeholder=">напиши свой ответ..."></textarea>
           <button id="reply-btn">Ответить</button>
         </div>
+        <div class="toolbar95" id="thread-actionbar" style="margin:8px 0; display:none;"></div>
         <div id="reply-list"></div>
       </div>
     </div>
