--- a/thread.html
+++ b/thread.html
@@ -36,7 +36,7 @@
         <h2 id="thread-title" style="color:#000;">/b/ - Тред</h2>
         <p id="thread-info" style="color:#333; font-size: 0.9em;"></p>
         <div class="form-box" id="reply-form">
-          <textarea id="reply-input" placeholder=">напиши свой ответ..."></textarea>
+          <textarea class="input95" id="reply-input" placeholder=">напиши свой ответ..."></textarea>
           <button id="reply-btn">Ответить</button>
         </div>
         <div class="toolbar95" id="thread-actionbar" style="margin:8px 0; display:none;"></div>
