--- a/thread.html
+++ b/thread.html
@@ -30,17 +30,9 @@
         <button class="btn95 tb95" onclick="history.back()">×</button>
       </div>
     </div>
-
     <div class="panel95">
       <div class="thread" id="thread-container" style="background:#fff; color:#000; border:1px solid #808080; box-shadow:none;">
-        <h2 id="thread-title" style="color:#000;">/b/ - Тред</h2>
-        <p id="thread-info" style="color:#333; font-size: 0.9em;"></p>
-        <div class="form-box" id="reply-form">
-          <textarea class="input95" id="reply-input" placeholder=">напиши свой ответ..."></textarea>
-          <button id="reply-btn">Ответить</button>
-        </div>
-        <div class="toolbar95" id="thread-actionbar" style="margin:8px 0; display:none;"></div>
-        <div id="reply-list"></div>
+        <!-- content is injected by thread.js -->
       </div>
     </div>
   </div>
