--- a/index.html
+++ b/index.html
@@ -4,24 +4,18 @@
   <meta charset="UTF-8" />
   <title>FORUM.EXE</title>
   <link rel="stylesheet" href="style.css" />
-  <script type="module">
-    import './firebase.js';
-    import { mountForum95 } from './forum.js';
-    window.addEventListener("DOMContentLoaded", () => {
-      document.body.classList.add("win95-bg");
-      mountForum95(document.getElementById("forum-root"));
-    });
-  </script>
   <style>
     html, body { height: 100%; }
     body { margin: 0; }
-    /* Make the main grid two-columns with wider main area */
-    .container95 {
-      display: grid;
-      grid-template-columns: 420px 1fr;
-      gap: 10px;
-    }
   </style>
+  <script type="module">
+    import './firebase.js';
+    import { mountForumLayout } from './forum.js';
+    window.addEventListener("DOMContentLoaded", () => {
+      document.body.classList.add("win95-bg");
+      mountForumLayout(document.getElementById("forum-root"));
+    });
+  </script>
 </head>
 <body>
   <div id="forum-root"></div>
