--- a/index.html
+++ b/index.html
@@ -1,77 +1,59 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-  <meta charset="UTF-8" />
-  <title>FORUM.EXE</title>
-  <link rel="stylesheet" href="style.css" />
+  <meta charset="UTF-8">
+  <title>BROADCAST.EXE — Ночной эфир</title>
+  <link rel="stylesheet" href="style.css">
   <style>
-    body.win95-bg { height: 100vh; margin:0; }
-    .window-shell {
-      max-width: 1440px; /* ~20% already narrower than 1800 */
-      min-height: 88vh;
-      margin: 16px auto 32px;
-      box-shadow: inset -1px -1px 0 var(--95-dark), inset 1px 1px 0 var(--95-white);
-    }
-    .grid3 {
-      display: grid;
-      grid-template-columns: 420px 1fr 320px; /* left categories / threads / right sidebar */
-      gap: 16px;
-      padding: 12px;
-      box-sizing: border-box;
-    }
-    /* make left column scroll only if really needed */
-    .leftcol, .rightcol {
-      max-height: calc(84vh - 120px);
-      overflow: auto;
-    }
-    .cat-table {
-      width: 100%;
-      border-collapse: collapse;
-    }
-    .cat-table th {
-      text-align: left;
-      padding: 6px 8px;
-      background: #c0c0c0;
-      border: 1px solid #808080;
-    }
-    .cat-group {
-      margin: 10px 0 4px;
-      padding: 4px 8px;
-      background: #d6d6d6;
-      border: 1px solid #9c9c9c;
-      font-weight: bold;
-    }
-    .cat-grid {
-      display: grid;
-      grid-template-columns: repeat(3, minmax(0,1fr)); /* 3 columns inside group */
-      gap: 6px 10px;
-      padding: 8px;
-      border: 1px solid #9c9c9c;
-      background: #eee;
-    }
-    .cat-link {
-      display:inline-block;
-      padding: 2px 4px;
-      border: 1px solid #808080;
-      background: #fff;
-      text-decoration: none;
-      color: #000080;
-    }
-    .toolbar95 .right { margin-left: auto; }
-    .threads95 { width: 100%; border-collapse: collapse; }
-    .threads95 th, .threads95 td { border: 1px solid #808080; padding: 4px 6px; }
-    .status95 { display:flex; justify-content:space-between; margin-top:6px; }
+    /* локальные мелочи под Win95 */
+    .badge95{ display:inline-block; padding:2px 6px; border:1px solid var(--95-dark,#808080); background:#efefef; color:#000; font-size:12px; }
+    .feed95{ height:60vh; min-height:360px; max-height:70vh; overflow:auto;
+      background:#fff; color:#000;
+      border:2px solid #000; border-right-color:#fff; border-bottom-color:#fff; }
+    .row95{ display:grid; grid-template-columns:160px 1fr 64px; gap:8px; align-items:flex-start;
+      border-bottom:1px solid #9e9e9e; padding:6px 8px; }
+    .row95.dim { opacity:.55; }
   </style>
-  <script type="module">
-    import './firebase.js';
-    import { mountForumLayoutV2 } from './forum.js';
-    window.addEventListener("DOMContentLoaded", () => {
-      document.body.classList.add("win95-bg");
-      mountForumLayoutV2(document.getElementById("forum-root"));
-    });
-  </script>
+  <script type="module" src="broadcast.js"></script>
 </head>
-<body>
-  <div id="forum-root"></div>
+<body class="win95-bg">
+  <div class="window95" style="max-width:980px; margin:24px auto 80px;">
+    <div class="titlebar95">
+      <div class="icon"></div>
+      <div class="title">BROADCAST.EXE — Ночной эфир</div>
+      <div class="controls95">
+        <a href="profile.html" class="btn95 tb95" title="Админка">⚙</a>
+        <button class="btn95 tb95" onclick="history.back()">×</button>
+      </div>
+    </div>
+
+    <div class="toolbar95">
+      <div>Маска:&nbsp;
+        <select id="mask" class="input95">
+          <option>Гость</option>
+          <option>Ночной наблюдатель</option>
+          <option>Тень</option>
+          <option>Усталый клоун</option>
+          <option>Грустный киборг</option>
+        </select>
+      </div>
+      <div class="right">
+        <span class="badge95">Сеанс: <span id="sessionLabel"></span></span>
+        <span class="badge95">Осталось: <span id="left"></span></span>
+      </div>
+    </div>
+
+    <div class="panel95">
+      <div id="feed" class="feed95"></div>
+      <div class="status95" style="gap:8px; align-items:center; flex-wrap:wrap;">
+        <input id="msg" class="input95" placeholder="Сказать в эфир…" style="flex:1; min-width:240px;">
+        <button class="btn95" id="send">Отправить</button>
+        <button class="btn95" id="reset" title="Сбросить ленту (демо)">Сбросить</button>
+      </div>
+      <div class="status95" style="margin-top:6px; font-size:12px;">
+        Сообщения старше 10 минут блекнут, старше 30 — исчезают. Лента обнуляется в 06:00.
+      </div>
+    </div>
+  </div>
 </body>
 </html>
