--- a/index.html
+++ b/index.html
@@ -1,20 +1,23 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <title>BROADCAST.EXE — Ночной эфир</title>
-  <link rel="stylesheet" href="style.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="stylesheet" href="style.css" />
   <style>
-    /* локальные мелочи под Win95 */
+    /* Локальные мелочи под Win95 для ленты */
     .badge95{ display:inline-block; padding:2px 6px; border:1px solid var(--95-dark,#808080); background:#efefef; color:#000; font-size:12px; }
     .feed95{ height:60vh; min-height:360px; max-height:70vh; overflow:auto;
       background:#fff; color:#000;
       border:2px solid #000; border-right-color:#fff; border-bottom-color:#fff; }
-    .row95{ display:grid; grid-template-columns:160px 1fr 64px; gap:8px; align-items:flex-start;
+    .row95{ display:grid; grid-template-columns:160px 1fr auto; gap:8px; align-items:flex-start;
       border-bottom:1px solid #9e9e9e; padding:6px 8px; }
     .row95.dim { opacity:.55; }
+    .post-text { white-space:pre-wrap; word-break:break-word; }
+    .row95 .meta { font-size:12px; color:#333; }
+    .row95 .delbtn { margin-left:8px; }
   </style>
-  <script type="module" src="broadcast.js"></script>
 </head>
 <body class="win95-bg">
   <div class="window95" style="max-width:980px; margin:24px auto 80px;">
@@ -22,12 +25,17 @@
       <div class="icon"></div>
       <div class="title">BROADCAST.EXE — Ночной эфир</div>
       <div class="controls95">
-        <a href="profile.html" class="btn95 tb95" title="Админка">⚙</a>
+        <!-- убрали ссылку на profile.html как legacy -->
         <button class="btn95 tb95" onclick="history.back()">×</button>
       </div>
     </div>
 
-    <div class="toolbar95">
+    <!-- Меню под синей панелью -->
+    <div class="menubar95">
+      <div class="menu95" id="menu-admin" title="Войти как админ / открыть панель">Admin ▾</div>
+    </div>
+
+    <div class="toolbar95" style="justify-content:space-between;">
       <div>Маска:&nbsp;
         <select id="mask" class="input95">
           <option>Гость</option>
@@ -37,23 +45,33 @@
           <option>Грустный киборг</option>
         </select>
       </div>
-      <div class="right">
+      <div style="display:flex; gap:8px; align-items:center;">
+        <label for="ttl" style="color:#000;">Время жизни:</label>
+        <select id="ttl" class="input95">
+          <option value="10">10 минут</option>
+          <option value="20">20 минут</option>
+          <option value="30" selected>30 минут</option>
+        </select>
         <span class="badge95">Сеанс: <span id="sessionLabel"></span></span>
-        <span class="badge95">Осталось: <span id="left"></span></span>
+        <span class="badge95">До рассвета: <span id="left"></span></span>
       </div>
     </div>
 
     <div class="panel95">
       <div id="feed" class="feed95"></div>
       <div class="status95" style="gap:8px; align-items:center; flex-wrap:wrap;">
-        <input id="msg" class="input95" placeholder="Сказать в эфир…" style="flex:1; min-width:240px;">
+        <input id="msg" class="input95" placeholder="Сказать в эфир…" maxlength="600" style="flex:1; min-width:240px;" />
         <button class="btn95" id="send">Отправить</button>
-        <button class="btn95" id="reset" title="Сбросить ленту (демо)">Сбросить</button>
       </div>
       <div class="status95" style="margin-top:6px; font-size:12px;">
-        Сообщения старше 10 минут блекнут, старше 30 — исчезают. Лента обнуляется в 06:00.
+        Сообщения старше 10 минут блекнут, старше 30 — исчезают. Лента обнуляется в 06:00 (Europe/Amsterdam).
       </div>
     </div>
   </div>
+
+  <!-- Скрипты: firebase, меню, эфир -->
+  <script type="module" src="firebase.js"></script>
+  <script type="module" src="admin-menu.js"></script>
+  <script type="module" src="broadcast.firebase.js"></script>
 </body>
 </html>
