--- a/admin.html
+++ b/admin.html
@@ -1,12 +1,61 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <title>ADMIN.EXE</title>
-  <link rel="stylesheet" href="style.css">
-  <script type="module" src="admin.js"></script>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="stylesheet" href="style.css" />
+  <style>
+    .grid95 { display:grid; grid-template-columns: 1fr auto; gap:8px; }
+    .card95 { background:#fff; color:#000; padding:8px; border:2px solid #000;
+      border-right-color:#fff; border-bottom-color:#fff; }
+    .muted { color:#333; font-size:12px; }
+    .table95 { width:100%; border-collapse:collapse; background:#fff; color:#000; }
+    .table95 th,.table95 td{ border:1px solid #808080; padding:6px 8px; text-align:left; }
+    .table95 th{ background:var(--95-light); }
+  </style>
 </head>
 <body class="win95-bg">
-  <div id="admin-root"></div>
+  <div class="window95" style="max-width:1080px; margin:24px auto 80px;">
+    <div class="titlebar95">
+      <div class="icon"></div>
+      <div class="title">ADMIN.EXE — Панель</div>
+      <div class="controls95">
+        <button class="btn95 tb95" onclick="location.href='index.html'">⌂</button>
+        <button class="btn95 tb95" id="logoutBtn" title="Выйти">⎋</button>
+      </div>
+    </div>
+
+    <div class="panel95">
+      <div class="toolbar95" style="justify-content:space-between;">
+        <div>
+          <span class="group95">Состояние</span>
+          <span class="badge95">Пользователь: <span id="who"></span></span>
+        </div>
+        <div>
+          <button class="btn95" id="refreshBtn">Обновить</button>
+          <label style="color:#000; margin-left:8px;"><input type="checkbox" id="showExpired"/> Показывать истёкшие</label>
+        </div>
+      </div>
+
+      <div class="panel95">
+        <table class="table95" id="table">
+          <thead>
+            <tr>
+              <th>Создано</th>
+              <th>Истекает</th>
+              <th>Маска</th>
+              <th>Текст</th>
+              <th>Действия</th>
+            </tr>
+          </thead>
+          <tbody id="tbody"></tbody>
+        </table>
+      </div>
+    </div>
+  </div>
+
+  <script type="module" src="firebase.js"></script>
+  <script type="module" src="admin.js"></script>
 </body>
 </html>
